# docs/swagger.json
@@ -3512,10 +3512,19 @@
                 "alias": {
                     "type": "string"
                 },
+                "allowed_units": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "category": {
                     "type": "string"
                 },
                 "created_at": {
+                    "type": "string"
+                },
+                "default_unit": {
                     "type": "string"
                 },
                 "id": {
@@ -3529,6 +3538,9 @@
                 },
                 "latest_price": {
                     "$ref": "#/definitions/models.Price"
+                },
+                "unit_profile": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
